--- a/src/css/app.css
+++ b/src/css/app.css
@@ -12,16 +12,18 @@
   color: white;
   opacity: 1; /* Firefox */
 }
-#loggedin
+#loggedin,#loggedin1,#loggedin2
 {
   width:30%;
   margin-top:25px;
   margin-left:30px;
 }
+.mdl-navigation> a > i{
+  vertical-align:middle;
+}
 #hello2
 {
   display: flex;
-  height:600px;
 }
 .drawer-option {
   padding: 16px;
@@ -81,13 +83,12 @@
   width:30%;
   height:80%;
 }
-#map,#map1
+#map
 {
   display: none;
   margin-top: 25px;
   margin-left: 25px;
-  width: 70%;
-  height: 500px;
+  width: 65%;
   background-color: grey;
 }
 #ride_map
@@ -97,9 +98,9 @@
 #f_ride,#ride2
 {
   display: none;
-  text-align: center;
   margin-top:25px;
   margin-left:25px;
+  width:30%;
 }
 .hello
 {
